[gd_scene load_steps=16 format=2]

[ext_resource path="res://NPCs/PosterRemover/PosterRemover.png" type="Texture" id=1]
[ext_resource path="res://NPCs/PosterRemover/PosterRemover.gd" type="Script" id=2]
[ext_resource path="res://Common/HurtAndHitBox/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Shaders/WhiteHit.shader" type="Shader" id=4]
[ext_resource path="res://Common/WalkSound.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=11]
resource_name = "Idle"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=13]
resource_name = "Run"
length = 0.7
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=14]
resource_name = "Stunned"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="ShaderMaterial" id=9]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/active = false
shader_param/is_hurt = true

[sub_resource type="CapsuleShape2D" id=1]
resource_local_to_scene = true
radius = 2.0
height = 3.0

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.3 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=8]
resource_local_to_scene = true
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 35.26
gravity = Vector3( 0, 80, 0 )
initial_velocity = 20.0
angular_velocity = 120.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 100.0
radial_accel_random = 1.0
scale = 4.0
scale_curve = SubResource( 15 )
color = Color( 1, 0.972549, 0.878431, 1 )

[sub_resource type="CapsuleShape2D" id=10]
radius = 4.0
height = 3.0

[node name="PosterRemover" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 512
collision_mask = 0
script = ExtResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "GameSFX"

[node name="HealRate" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StunTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
reset_on_save = false
anims/Idle = SubResource( 11 )
anims/RESET = SubResource( 12 )
anims/Run = SubResource( 13 )
anims/Stunned = SubResource( 14 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 9 )
position = Vector2( 0, -6 )
texture = ExtResource( 1 )
hframes = 2
vframes = 2
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, -0.5 )
emitting = false
amount = 5
lifetime = 0.7
one_shot = true
speed_scale = 1.2
explosiveness = 1.0
randomness = 0.61
process_material = SubResource( 8 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -3.5 )
collision_layer = 512
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 10 )

[connection signal="timeout" from="HealRate" to="." method="_on_HealRate_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]
